Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <pre><code>                                ### Welcome to my GitHub page.
-</code></pre>
+        <h3>
+<a name="welcome-to-my-github-page" class="anchor" href="#welcome-to-my-github-page"><span class="octicon octicon-link"></span></a>Welcome to my GitHub page.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>The Project "ErlangStudy" which i use to practice Erlang programming skill.</p>
 
 <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
