--- a/index.html
+++ b/index.html
@@ -46,17 +46,15 @@ $ git clone git@github.com:wangyangkobe/ErlangStudy.git
 <h3>
 <a name="the-project-about-findnode" class="anchor" href="#the-project-about-findnode"><span class="octicon octicon-link"></span></a>The project about "findnode".</h3>
 
-<p>findnode: multicast UDP based. a node group corresponds to a multicast ip/port combination</p>
+<p>findnode:  multicast UDP based, a node group corresponds to a multicast ip/port combination.</p>
+
+<p>findNodeServer.erl  This file is the server. You should first start the server in one node.
+findNodeServer.erl  This file is the client.</p>
 
 <h3>
 <a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<p>Anthing wrong with code, pls contact <a href="mailto:250801860@qq.com">250801860@qq.com</a></p>
       </section>
     </div>
 
