--- a/index.html
+++ b/index.html
@@ -46,10 +46,11 @@ $ git clone git@github.com:wangyangkobe/ErlangStudy.git
 <h3>
 <a name="the-project-about-findnode" class="anchor" href="#the-project-about-findnode"><span class="octicon octicon-link"></span></a>The project about "findnode".</h3>
 
-<p>findnode:  multicast UDP based, a node group corresponds to a multicast ip/port combination.</p>
+<p><strong>findnode:  multicast UDP based, a node group corresponds to a multicast ip/port combination.</strong></p>
 
-<p>findNodeServer.erl  This file is the server. You should first start the server in one node.
-findNodeServer.erl  This file is the client.</p>
+<pre><code>findNodeServer.erl  This file is the server. You should first start the server in one node.
+findNodeServer.erl  This file is the client.
+</code></pre>
 
 <h3>
 <a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
