Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ $ git clone git@github.com:wangyangkobe/ErlangStudy.git
 <p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
 
 <h2>
-<a name="-the-project-about-findnode" class="anchor" href="#-the-project-about-findnode"><span class="octicon octicon-link"></span></a>### The project about "findnode".</h2>
+<a name="the-project-about-findnode" class="anchor" href="#the-project-about-findnode"><span class="octicon octicon-link"></span></a>The project about "findnode".</h2>
 
 <p><strong>findnode:  multicast UDP based, a node group corresponds to a multicast ip/port combination.</strong></p>
 
@@ -53,9 +53,9 @@ findNodeServer.erl  This file is the client.
 </code></pre>
 
 <h2>
-<a name="-the-project-about-hhs_game" class="anchor" href="#-the-project-about-hhs_game"><span class="octicon octicon-link"></span></a>### The project about "hhs_game".</h2>
+<a name="the-project-about-hhs_game" class="anchor" href="#the-project-about-hhs_game"><span class="octicon octicon-link"></span></a>The project about "hhs_game".</h2>
 
-<p>**This project is a game server. By now, the project has realize: user register, user login, game room create and game hall create.</p>
+<p><strong>This project is a game server. By now, the project has realize: user register, user login, game room create and game hall create.</strong></p>
 
 <h3>
 <a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
